# NdkDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/joseph/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: crypt.c  demo1.cpp  demo2.cpp  effect_fix.cpp
app/src/main/java/com/example/joseph/ndkdemo/: Crytor.java  Demo1.java  Demo2.java  EnumBean.java  MainActivity.java  MyWebView.java  NdkApplication.java  SkinChangeBaseActivity.java  VoiceEffectActivity.java  VoiceEffectUtils.java  WebTestActivity.java
app/src/main/res/layout/: activity_main.xml  activity_voice_effect.xml  activity_web_test.xml
app/src/test/java/com/example/joseph/ndkdemo/: ExampleUnitTest.java
maplib/: build.gradle
maplib/src/main/: AndroidManifest.xml
maplib/src/main/java/com/study/maplib/: FlingRecyclerview.java  ListStoreActivity.java  LocationUtils.java  MapInitActivity.java  MapSetActivity.java
maplib/src/main/res/layout/: activity_list_store.xml  activity_map_view.xml
